更新 README.md，修改服務啟動命令，更新依賴項，調整啟動內容描述

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - "7860:7860"
     volumes:
       - .:/app
-    command: python app/app.py
+    command: uvicorn app.api:app --host 0.0.0.0 --port 7860
     depends_on:
       - ollama
     deploy:
