--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     volumes:
       - .:/app
     command: python scripts/build.py
+    tty: true
     deploy:
       resources:
         reservations:
