新增 ollama 服務的資料卷設定，以持久化模型資料

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: ollama/ollama
     ports:
       - "11434:11434"
+    volumes:
+      - ./data/ollama:/root/.ollama
     deploy:
       resources:
         reservations:
