在 docker-compose.yml 中新增 PYTHONPATH 環境變數以確保正確的模組導入；重構 build.py、build_validate.py 和 build_vectorize.py 中的模組導入方式，改為使用絕對路徑以提高可讀性和一致性。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     volumes:
       - .:/app
     command: python scripts/build.py
+    environment:
+      - PYTHONPATH=/app
     tty: true
     deploy:
       resources:
